--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -1,13 +1,14 @@
 
 .map-container {
   background-color: grey;
+  position: relative;
   /* These sizes should match the `WORLD_SIZE` const */
   height: 400px;
   width: 400px;
 }
 
 .map-location {
-  position: relative;
+  position: absolute;
   /* These sizes should match the `MAP_LOCATION_SIZE` const */
   height: 5px;
   width: 5px;
