Make the items in the `HouseList` show when they are selected.
Before it was hard to tell what the selected item in the list was. This
commit introduces a dependency on the
[`classnames`](https://github.com/JedWatson/classnames#readme) package.

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -31,6 +31,11 @@
   overflow-y: scroll;
 }
 
+.house-list-item {}
+.house-list-item--selected {
+  color: red;
+}
+
 @media all and (min-width: 600px) {
   .map-outer-container { flex: 0 1 0; }
 
