Allow the `Controls` constraints to toggle between edit mode and display mode.
I also added some colors to make each row more visible. The tests are
currently not passing.

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -56,6 +56,10 @@
   color: grey;
 }
 
+.constraint-list-item:nth-child(even) {
+  background-color: lightgrey;
+}
+
 @media all and (min-width: 600px) {
   .map-outer-container { flex: 0 1 0; }
 
